# fily

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README-Docker.md  README.md  SECURITY_AUDIT.md  config-example.toml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.yml
docs/: CHANGELOG.md  DOCKER.md  PERFORMANCE_REPORT.md  README.md  S3_COMPATIBILITY_GAP_ANALYSIS.md  S3_VERSIONING_DESIGN.md  SECURITY_AUDIT.md
src/: config.rs  fily.rs  lib.rs  main.rs
src/fily/: auth.rs  auth_middleware.rs  create_bucket.rs  delete_bucket.rs  delete_object.rs  encryption.rs  etag.rs  generate_presigned_url.rs  get_object.rs  metadata.rs  path_security.rs  put_object.rs  s3_app_error.rs  search_bucket.rs
src/fily/encryption/: key_manager.rs  traits.rs  xchacha20poly1305.rs
tests/: auth_tests.rs  content_type_tests.rs  error_handling_tests.rs  etag_tests.rs  metadata_security_tests.rs  middleware_tests.rs  presigned_url_tests.rs  s3_error_codes_tests.rs  s3_handlers_tests.rs  signature_validation_performance_test.rs
