[package]
name = "fily"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "http2"] }
tower-http = { version = "0.6.6", features = ["trace"] }
chrono = "0.4.38"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = [
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
    "tracing",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "2.0.12"
anyhow = "1.0.82"
tower = "0.5.1"
future-utils = "0.12.1"
dotenv = "0.15.0"
http-body-util = "0.1.1"
bytes = "1.6.0"
quick-xml = { version = "0.38.0", features = ["serialize"] }
toml = "0.8.14"
clap = { version = "4.5.7", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"
url = "2.5.0"
percent-encoding = "2.3.1"
chacha20poly1305 = "0.10"
rand = "0.8"
hkdf = "0.12"
md-5 = "0.10"
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
subtle = "2.5"

[dev-dependencies]
tempfile = "3.8"
